feat: implement auth service
