# src/auth/auth.controller.ts
@@ -1,0 +1,32 @@
+import { Body, Controller, HttpCode, HttpStatus, Post } from '@nestjs/common';
+import { CreateUserDto } from '../user/dto/create-user.dto';
+import { UserResponseDto } from '../user/dto/user-response.dto';
+import { Public } from './auth.decorators';
+import { AuthService } from './auth.service';
+import { RefreshTokenDto } from './dto/refresh-token.dto';
+import { TokensResponseDto } from './dto/tokens-response.dto';
+
+@Controller('auth')
+export class AuthController {
+  constructor(private readonly authService: AuthService) {}
+
+  @Post('signup')
+  @Public()
+  @HttpCode(HttpStatus.CREATED)
+  async signup(@Body() signupDto: CreateUserDto): Promise<UserResponseDto> {
+    return await this.authService.signup(signupDto);
+  }
+
+  @Post('login')
+  @Public()
+  @HttpCode(HttpStatus.OK)
+  async login(@Body() loginDto: CreateUserDto): Promise<TokensResponseDto> {
+    return await this.authService.login(loginDto);
+  }
+
+  @Post('refresh')
+  @HttpCode(HttpStatus.OK)
+  async refresh(@Body() refreshTokenDto: RefreshTokenDto): Promise<TokensResponseDto> {
+    return await this.authService.refresh(refreshTokenDto);
+  }
+}
