# src/auth/dto/refresh-token.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class RefreshTokenDto {
+  @ApiProperty({ description: 'refresh jwt' })
+  @IsNotEmpty()
+  @IsString()
+  refreshToken: string;
+}
