# src/auth/dto/tokens-response.dto.ts
@@ -1,0 +1,14 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class TokensResponseDto {
+  @ApiProperty({ description: 'access jwt' })
+  @IsNotEmpty()
+  @IsString()
+  accessToken: string;
+
+  @ApiProperty({ description: 'refresh jwt' })
+  @IsNotEmpty()
+  @IsString()
+  refreshToken: string;
+}
